--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "f2f-app",
   "productName": "f2f-app",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
@@ -12,8 +12,8 @@
     "lint": "eslint src --color"
   },
   "keywords": [],
-  "author": "agarcia",
-  "license": "MIT",
+  "author": "ushin",
+  "license": "AGPLv3",
   "config": {
     "forge": {
       "make_targets": {
@@ -24,8 +24,7 @@
           "zip"
         ],
         "linux": [
-          "deb",
-          "rpm"
+          "deb"
         ]
       },
       "electronPackagerConfig": {
