--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "f2f-app",
   "productName": "f2f-app",
   "version": "0.1.0",
-  "description": "My Electron application description",
+  "description": "f2f: Face-2-Face reference application for USHIN",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -36,8 +36,8 @@
       "electronInstallerDebian": {},
       "electronInstallerRedhat": {},
       "github_repository": {
-        "owner": "",
-        "name": ""
+        "owner": "ushin-inc",
+        "name": "f2f-app"
       },
       "windowsStoreConfig": {
         "packageName": "",
