--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   },
   "dependencies": {
     "cryptiles": ">=4.1.2",
-    "mime": ">=1.4.1",
-    "hoek": ">=4.2.1",
     "electron-compile": "^6.4.4",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "hoek": ">=4.2.1",
+    "mime": ">=1.4.1"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
